style: change to google-java-format and run format :lipstick: